# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: production.yaml
migrations/: 20220228060952_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
