[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
config = "0.11"
uuid = {version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = {version = "0.1.30", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5.0-beta.7"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.14.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"



